--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: php-app
+    restart: unless-stopped
     env_file:
       - .env
     environment:
